# TMA4280-Exercise6

./: CMakeLists.txt  matrix.c  matrix.h  matrixmult.c  poisson.c  poisson_ompi.c  poisson_opprydning.c  quaderr.py  temp.c  transpose.c  transpose.h  utils.c  utils.h
